[package]
name = "electrs-tapyrus"
version = "0.4.0"
authors = ["Roman Zeyde <me@romanzey.de>"]
description = "An efficient re-implementation of Electrum Server in Rust"
license = "MIT"
homepage = "https://github.com/chaintope/electrs-tapyrus"
repository = "https://github.com/chaintope/electrs-tapyrus"
keywords = ["bitcoin", "electrum", "server", "index", "database"]
readme = "README.md"
edition = "2018"
build = "build.rs"

[lib]
name = "electrs_tapyrus"
path = "src/lib.rs"

[package.metadata.configure_me]
spec = "config_spec.toml"

[profile.release]
lto = true

[features]
latest_rust = []  # use latest Rust features (otherwise, support Rust 1.34)

[dependencies]
assert-json-diff = "1.0.0"
base64 = "0.10"
bincode = "1.0"
tapyrus = { git = "https://github.com/chaintope/rust-tapyrus/", tag = "v0.3.0", features = ["use-serde"] }
bitcoin_hashes = "0.7"
configure_me = "0.3.4"
configure_me_codegen = "0.3.14"
crossbeam-channel = "0.3"
dirs = "1.0"
error-chain = "0.12"
glob = "0.3"
hex = "0.3"
libc = "0.2"
log = "0.4"
lru = "0.4.3"
num_cpus = "1.0"
openassets-tapyrus = { git = "https://github.com/chaintope/openassets-tapyrus/", tag = "v0.2.1" }
page_size = "0.4"
prometheus = "0.5"
rocksdb = "0.13"
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"]}
serde_derive = "1.0"
serde_json = "1.0"
signal-hook = "0.1"
stderrlog = "0.4.1"
sysconf = ">=0.3.4"
time = "0.1"
tiny_http = "0.6"

[build-dependencies]
configure_me_codegen = "0.3.12"
